src/main/kubernetes/install.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    name: pet-battle-api
    labels:
      app: cats
  spec:
    lookupPolicy:
      local: false
    tags:
      - annotations: null
        from:
          kind: DockerImage
          name: quay.io/eformat/pet-battle-api
        importPolicy: {}
        name: latest
        referencePolicy:
          type: Source
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: cats
      app.kubernetes.io/component: cats
      app.kubernetes.io/instance: cats
    name: cats
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: cats
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          deploymentconfig: cats
      spec:
        containers:
        - env:
          - name: DATABASE_ADMIN_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-admin-password
                name: mongodb
          - name: DATABASE_NAME
            valueFrom:
              secretKeyRef:
                key: database-name
                name: mongodb
          - name: DATABASE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: mongodb
          - name: DATABASE_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: mongodb
          image: ''
          imagePullPolicy: Always
          name: cats
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - cats
        from:
          kind: ImageStreamTag
          name: pet-battle-api:latest
        lastTriggeredImage: cats/pet-battle-api:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: cats
      app.kubernetes.io/component: cats
      app.kubernetes.io/instance: cats
    name: cats
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: 8080-tcp
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: 8443-tcp
    selector:
      deploymentconfig: cats
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: cats
      app.kubernetes.io/component: cats
      app.kubernetes.io/instance: cats
    name: cats
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: cats
      weight: 100
    wildcardPolicy: None
  status: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
